--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:hint="@string/peso"
         app:hintTextColor="@color/blue"
         app:boxStrokeColor="@color/teal_200"
+        app:errorEnabled="true"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         >
 
@@ -45,12 +46,13 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:hint="@string/altura"
         app:hintTextColor="@color/blue"
         app:boxStrokeColor="@color/teal_200"
+        app:errorEnabled="true"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         >
 
@@ -80,7 +82,7 @@
         android:id="@+id/txtResultado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/resultado"
+        android:text=""
         android:textSize="22sp"
         android:textColor="@color/blue"
         android:textStyle="bold"
